Kubernetes with ArgoCD/namespace_monitoring.yml
# Namespace for the kube-state-metrics / node-exporter services in svc_monitoring.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
