Kubernetes with ArgoCD/dbstatefullset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-pod
spec:
  serviceName: mydb
  replicas: 1
  selector:
    matchLabels:
      app: db-pod
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: db-pod
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
      - name: db-pod
        image: bitnamilegacy/mysql:8.0.36
        ports:
        - containerPort: 3306
        readinessProbe:
          tcpSocket:
            port: 3306
          periodSeconds: 10
        volumeMounts:
        - name: mysql-storage
          mountPath: /bitnami/mysql
        - name: init-script-volume
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
      volumes:
      - name: init-script-volume
        configMap:
          name: my-config
          items:
          - key: init.sql
            path: init.sql
  volumeClaimTemplates:
  - metadata:
      name: mysql-storage
    spec:
      accessModes: ["ReadWriteMany"]
      storageClassName: efs-sc
      resources:
        requests:
          storage: 1Gi
